--- a/.gitignore
+++ b/.gitignore
@@ -81,6 +81,7 @@ typings/
 # Nuxt.js build / generate output
 .nuxt
 dist
+test
 
 # Gatsby files
 .cache/
@@ -99,6 +100,7 @@ dist
 
 # DynamoDB Local files
 .dynamodb/
+.DS_Store
 
 # TernJS port file
 .tern-port
